--- a/blog/src/assets/css/markdown.css
+++ b/blog/src/assets/css/markdown.css
@@ -528,7 +528,7 @@
 .markdown-body hr {
   background-color: #e1e4e8;
   border: 0;
-  height: .25em;
+  height: 1px;
   margin: 24px 0;
   padding: 0;
 }
@@ -572,11 +572,9 @@
   margin-bottom: 16px;
   margin-top: 24px;
 }
-
 .markdown-body h1 {
   font-size: 2em;
 }
-
 .markdown-body h1,
 .markdown-body h2 {
   border-bottom: 1px solid #eaecef;
