--- a/blog/src/assets/css/base.css
+++ b/blog/src/assets/css/base.css
@@ -66,6 +66,7 @@ body {
   background-color: #fff;
 }
 
+/* 禁止复制粘贴 */
 .user-select {
   -moz-user-select: none; /* Firefox私有属性 */
   -webkit-user-select: none; /* WebKit内核私有属性 */
@@ -73,13 +74,29 @@ body {
   -khtml-user-select: none; /* KHTML内核私有属性 */
   -o-user-select: none; /* Opera私有属性 */
   user-select: none; /* CSS3属性 */
-}
+} 
 
 /* 博客展示公共部分 */
+.icon-fold i {
+  display: flex;
+  justify-content: flex-end;
+  margin: 10px;
+}
+
+.dashboard {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+.dashboard .ant-layout-sider {
+  z-index: 100;
+  overflow: hidden;
+}
+
 .dashboard .avatar {
-  width: 120px;
-  height: 120px;
-  margin: 50px auto 20px;
+  width: 60%;
+  margin: 40px auto;
 }
 
 .dashboard .avatar:hover {
@@ -94,9 +111,9 @@ body {
   cursor: pointer;
 }
 
-.dashboard .title {
+.dashboard .user-title {
   font-size: 24px;
-  margin-bottom: 30px;
+  margin-bottom: 20px;
   color: #1890ff;
 }
 
@@ -138,12 +155,10 @@ body {
 .social-contact .put-on-file a{
   font-size: 14px;
   color: #9d9d9d;
-
 }
 
 /* 首页 */
 .home {
-  min-width: 500px;
   height: 100%;
   padding-top: 20px;
   background-color: #fff;
@@ -183,6 +198,7 @@ body {
 
 .home .title {
   font-size: 24px;
+  word-break:break-all;
   color: #3d3d3d;
 }
 
@@ -200,6 +216,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  white-space:nowrap;
   margin-top: 10px;
   color: #909090;
 }
@@ -462,9 +479,7 @@ body {
 }
 
 .empty {
-  position: absolute;
-  top: 50%;
-  left: 50%;
+  margin: 50px auto;
 }
 
 /* 动画 */
